--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ collections:
     permalink: '/posts/:title/'
 layout_type: boxed
 style: classic
-palette: red
+palette: green
 mode: light
 base_font: serif
 header:
