_config.yml: Multiple updates: * updated primary_nav_links in header * updated __metadata in primary_nav_links * updated has_icon in primary_nav_links * updated icon in primary_nav_links * updated icon_position in primary_nav_links * updated new_window in primary_nav_links * updated no_follow in primary_nav_links * updated type in primary_nav_links * updated label in primary_nav_links * updated url in primary_nav_links

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,15 @@ header:
     - label: About
       url: /about
       style: link
+    - label: lorem-ipsum
+      url: '#'
+      style: link
+      has_icon: false
+      icon: arrow-left
+      icon_position: right
+      new_window: false
+      no_follow: false
+      type: action
     - label: Contact me
       url: /contact
       style: link
